@@ -3,16 +3,17 @@
  * This file includes all of the files in the commons API in the right order.
  * Changing the order of include files may break things!!!
  * @package com
+ * @author Kevork Sepetci
  */
  
+
 	//Package: com
 	require_once("Element.php");
 
-	//Package: com.form
 	require_once("form/AbstractInput.php");
 	require_once("form/Form.php");
 	
-	//Package: com.form.html
+	
 	require_once("form/html/Text.php");
 	require_once("form/html/Select.php");
 	require_once("form/html/TextArea.php");
@@ -23,5 +24,5 @@
 	require_once("form/html/Reset.php");
 	require_once("form/html/Hidden.php");
 	
-	//Package: com.html
+
 	require_once("html/Table.php");
