@@ -1,0 +1,20 @@
+.label{
+	width: 250px;
+	display: inline-block;
+	text-align: right;
+	margin-right: 10px;
+	vertical-align: top;
+}
+
+form{
+	line-height: 18pt;
+}
+
+td{
+	border: 1px solid grey;
+	margin: 0px;
+}
+
+th{
+	margin-right: 1px solid grey;
+}
